--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.1",
     "axios": "0.18.0",
     "base-64": "^1.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-base64": "^0.1.0",
     "react-native-safe-area-context": "^3.1.8",
+    "react-native-slide-button": "^1.2.1",
     "rn-swipe-button": "^1.3.2"
   },
   "devDependencies": {
